# pillow_heif

./: .cirrus.star  .codecov.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  LICENSES_BUNDLED.txt  LICENSES_bundled.txt  MANIFEST.in  README.md  RELEASING.md  SECURITY.md  codecov.yml  pyproject.toml  pytest.ini  renovate.json  requirements-dev.txt  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  wheels_m1.sh
.github/: .codecov.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  renovate.json  transform_to-pi_heif.py  wheels-test.py  wheels_m1.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/ISSUE_TEMPLATE /: bug_report.yml
.github/workflows/: analysis-coverage.yml  build-cache-deps.yml  build-dependencies.yml  build-ph-lite.yml  close-stale.yml  cpu_flags.yml  create-release-draft.yml  docs.yml  nightly-src-build.yml  publish-pypi-from-ga.yml  publish-pypi-from-gh.yml  publish-pypi-pi_heif.yml  publish-pypi.yaml  publish-pypi.yml  publish-wheels.yml  stale.yml  static-analysis.yml  test-release-wheels.yaml  test-released-wheels.yaml  test-src-build-linux.yml  test-src-build-macos.yml  test-src-build-windows.yml  test-src-build.yml  test-wheels-pi_heif.yml  test-wheels.yaml  test-wheels.yml  test.yml  test2.yml  wheels-pi_heif.yml  wheels-pillow_heif.yml  wheels.yml
benchmarks/: benchmark_decode.py  benchmark_encode.py  image_small.heic  measure_decode.py  measure_encode.py
build_scripts/: dependencies.toml  init_linux.sh  wheels_macOS_M1.sh
build_scripts/linux/: aom.sh  autoconf.sh  automake.sh  cmake.sh  libaom.sh  libde265.sh  libffi.sh  libheif.sh  libressl.sh  nasm.sh  pkg-config.sh  x265.sh
ci/: cirrus_general_ci.yml  cirrus_wheels.yml
docker/: armv7l_wheel.Dockerfile  from_src.Dockerfile  manylinux_armv7l_wheel.Dockerfile  manylinux_armv7l_wheels.Dockerfile  musllinux_armv7l_wheel.Dockerfile  musllinux_armv7l_wheels.Dockerfile  src_alpine_3_14.Dockerfile  src_alpine_3_15.Dockerfile  src_alpine_3_16.Dockerfile  src_debian_10.Dockerfile  src_ubuntu_20_04.Dockerfile  src_ubuntu_22_04.Dockerfile  test.Dockerfile  test_wheels.Dockerfile
docker/from_src/: Almalinux_9.Dockerfile  Alpine_3_14.Dockerfile  Alpine_3_15.Dockerfile  Alpine_3_16.Dockerfile  Alpine_3_17.Dockerfile  Alpine_3_18.Dockerfile  Alpine_3_19.Dockerfile  Alpine_3_20.Dockerfile  Alpine_3_21.Dockerfile  Archlinux.Dockerfile  Debian_10.Dockerfile  Debian_11.Dockerfile  Debian_12.Dockerfile  Fedora_38.Dockerfile  Fedora_39.Dockerfile  Ubuntu_22_04.Dockerfile
docs/: BUILDING.md  Makefile  benchmarks.rst  conf.py  cooking-heif-file.rst  encoding.rst  heif-file.rst  image-modes.rst  index.rst  installation.rst  make.bat  options.rst  order-of-images.rst  pillow-plugin.rst  quickstart.rst  rtd_docs_requirements.txt  saving-images.rst  thumbnails.rst  tutorial.rst  v0.3-order-of-images.rst  workaround-orientation.rst
docs/reference/: API.rst  HeifFile.rst  HeifImage.rst  HeifImagePlugin.rst  constants.rst  exceptions.rst  index.rst  internal.rst  links.rst  thumbnails.rst
examples/: dump_debug_heif_info.py  dump_images_info.py  heif_add_del_thumbnails.py  heif_create_sequence.py  heif_dump_info.py  heif_enumerate.py  heif_remove_image.py  heif_save.py  images_and_thumbnails.py  opener_append_images.py  opener_decode_image.py  opener_display_images.py  opener_encode_image.py  opener_encoder_test.py  opener_test.py  pillow_add_del_thumbnails.py  pillow_create_sequence.py  pillow_dump_info.py  pillow_enumerate.py  pillow_remove_image.py  pillow_save.py  reader_add_thumbnails.py  reader_convert_image.py  reader_create_image.py  reader_display_images.py  reader_encode_image.py  reader_images.py  reader_remove_image.py  reader_resave_image.py
libheif/: build.py  build_libs.py  heif.h  libheif.rb  libheif_build.py  linux_build_libs.py  linux_build_tools.py  public_api.h  x265_cmake_1.patch  x265_cmake_2.patch
libheif/libheif/: 011-fix-loading-alpha-image.patch  012-fix-do-not-pad-16x16-AOM.patch
libheif/linux/: build_libs.py
libheif/linux-libheif/: 020-fix-wrong-copy-size.patch
libheif/linux/libheif/: 001-aom-remove-extend_padding_to_size.patch  (+21 more)
libheif/macos/: libheif.rb
libheif/mingw-w64-libheif/: 001-fix-pkgconfig-provide-includedir.patch  002-cmake-enable-gdk-pixbuf.patch  PKGBUILD
pi-heif/: LICENSES_bundled.txt  README.md  linux_build_libs.py  setup.cfg
pi-heif/libheif/: linux_build_libs.py
pi-heif/libheif/macos/: libheif.rb
pi-heif/libheif/windows/mingw-w64-libheif/: PKGBUILD
pi-heif/tests/: basic_test.py
pillow_heif/: AvifImagePlugin.py  Heif.py  HeifImagePlugin.py  __init__.py  _deffered_error.py  _lib_info.py  _lib_version.py  _libheif_ctx.py  _options.py  _pillow_heif.c  _version.py  as_opener.py  as_plugin.py  constants.py  error.py  heif.py  helpers.c  helpers.h  misc.py  options.py  private.py  reader.py  thumbnails.py  writer.py
scripts/: build__autoconf.sh  build__cache_automake.sh  init_linux.sh  init_macos.sh
tests/: basic_test.py  compare_hashes.py  convert_mode_test.py  dataset.py  hashes_test.py  heif_encoder_test.py  heif_read_test.py  heif_test.py  heif_write_test.py  helpers.py  images_info.json  import_error_test.py  leaks_test.py  libheif_test.py  memory_leaks.py  metadata_etc_test.py  metadata_exif_test.py  metadata_xmp_test.py  misc_test.py  mode_convert_test.py  modes_test.py  numpy_test.py  opencv_bug.py  opencv_test.py  opener_encoder_test.py  opener_test.py  options_test.py  orientation_test.py  overflow_test.py  pillow_read_test.py  pillow_write_test.py  read_test.py  reader_test.py  test_opener.py  test_read.py  threading_test.py  thumbnails_test.py  write_test.py  xmp_tags_test.py
tests/images/: arrow__prof.heic  invalid_id.heic  lego.heic  parfait.heic  pug_1_0.heic  pug_1_1.heic.heic  pug_1_2.heic  pug_2_0.heic  pug_2_1.heic  pug_2_3.heic  rgb10.heif  rgb10_639_480_1_3.heic  rgb12.heif  rgb8_128_128_2_1.heic  rgb8_150_128_2_1.heic  rgb8_210_128_2_2.heic  rgb8_512_512_1_0.heic  rgb8_512_512_1_2.heic  rgba12.heif
(+85 files in other folders)
