[build-system]
requires = [
  "setuptools>=67.8",
  "wheel",
]

[tool.cibuildwheel]
build-verbosity = "2"
build = [
  "cp310-* cp311-* cp312-* cp313-* cp314-* pp311-*",
]
skip = [
  "cp38-* cp39-* pp38-* pp39-* pp310-*",
]
test-extras = "tests-min"
test-command = "pytest {project}"
before-test = [
  "pip install --prefer-binary pillow",
  "pip install --only-binary=:all: numpy || true",
  "pip install pympler || true",
]
enable = [ "pypy", "pypy-eol" ]
macos.repair-wheel-command = [
  "DYLD_LIBRARY_PATH=$REPAIR_LIBRARY_PATH delocate-listdeps {wheel}",
  "DYLD_LIBRARY_PATH=$REPAIR_LIBRARY_PATH delocate-wheel -v --require-archs {delocate_archs} -w {dest_dir} {wheel}",
]
windows.before-build = [
  "pip install delvewheel",
]

[tool.black]
line-length = 120
target-version = [ "py310" ]
preview = true

[tool.ruff]
target-version = "py310"
line-length = 120
preview = true
lint.select = [
  "A",
  "B",
  "C",
  "D",
  "E",
  "F",
  "FURB",
  "G",
  "I",
  "PERF",
  "PIE",
  "Q",
  "RET",
  "RUF",
  "S",
  "SIM",
  "UP",
  "W",
]
lint.extend-ignore = [
  "D105",
  "D107",
  "D203",
  "D213",
  "D401",
  "E203",
  "I001",
  "RUF100",
]
lint.per-file-ignores."pillow_heif/__init__.py" = [
  "F401",
]
lint.per-file-ignores."setup.py" = [
  "S",
]
lint.extend-per-file-ignores."benchmarks/**/*.py" = [
  "D",
  "S404",
  "S603",
]
lint.extend-per-file-ignores."docs/**/*.py" = [
  "D",
]
lint.extend-per-file-ignores."examples/**/*.py" = [
  "D",
  "PERF",
]
lint.extend-per-file-ignores."libheif/**/*.py" = [
  "D",
  "PERF",
  "S",
  "SIM905",
]
lint.extend-per-file-ignores."tests/**/*.py" = [
  "B009",
  "D",
  "E402",
  "PERF",
  "S",
  "SIM115",
  "UP",
]
lint.mccabe.max-complexity = 16

[tool.isort]
profile = "black"

[tool.pylint]
master.py-version = "3.10"
master.extension-pkg-allow-list = [
  "_pillow_heif",
]
design.max-attributes = 14
design.max-branches = 16
design.max-locals = 18
design.max-returns = 8
similarities.min-similarity-lines = 6
similarities.ignore-imports = "yes"
basic.good-names = [
  "a",
  "b",
  "c",
  "d",
  "e",
  "f",
  "i",
  "j",
  "k",
  "v",
  "ex",
  "_",
  "fp",
  "im",
  "HeifImagePlugin",
]
reports.output-format = "colorized"
messages_control.disable = [
  "missing-class-docstring",
  "missing-function-docstring",
  "line-too-long",
]

[tool.pytest]
ini_options.minversion = "6.0"
ini_options.testpaths = [
  "tests",
]
ini_options.filterwarnings = [
  "ignore::DeprecationWarning",
]
ini_options.addopts = "-rs --color=yes"

[tool.coverage]
run.cover_pylib = true
run.include = [
  "*/pillow_heif/*",
]
run.omit = [
  "*/tests/*",
]
report.exclude_lines = [
  "DEPRECATED",
  "DeprecationWarning",
  "pragma: no cover",
  "raise NotImplementedError",
]

[tool.mypy]
warn_unreachable = true
ignore_missing_imports = true
warn_no_return = true
strict_optional = true
show_error_codes = true
