[build-system]
requires = [
  "setuptools>=67.8",
  "wheel",
]

[tool.cibuildwheel]
build = [
  "cp310-* cp311-* cp312-* cp313-* cp314-* cp314t-* cp315-* cp315t-* pp311-*",
]
# cp315/cp315t are built for early testing only: wheels.yml skips them on tag builds,
# as wheels built against a beta CPython ABI must not be published to PyPI.
# Once 3.15 ABI is stable (rc1+) in cibuildwheel: drop "cpython-prerelease" and the skips.
enable = [ "cpython-prerelease", "pypy" ]
build-verbosity = "2"
before-test = [
  "pip install --prefer-binary pillow",
  "pip install --only-binary=:all: numpy || true",
  "pip install pympler || true",
]
test-command = "python {project}/.github/wheels-test.py {project}"
test-requires = [ "coverage" ]
test-extras = "tests-min"
macos.repair-wheel-command = [
  "DYLD_LIBRARY_PATH=$REPAIR_LIBRARY_PATH delocate-listdeps {wheel}",
  "DYLD_LIBRARY_PATH=$REPAIR_LIBRARY_PATH delocate-wheel -v --require-archs {delocate_archs} -w {dest_dir} {wheel}",
]
windows.before-build = [
  "pip install delvewheel",
]

[tool.black]
target-version = [ "py310" ]
line-length = 120
preview = true

[tool.ruff]
target-version = "py310"
line-length = 120
preview = true
lint.select = [
  "A",
  "B",
  "C",
  "D",
  "E",
  "F",
  "FURB",
  "G",
  "I",
  "PERF",
  "PIE",
  "Q",
  "RET",
  "RUF",
  "S",
  "SIM",
  "UP",
  "W",
]
lint.extend-ignore = [
  "D105",
  "D107",
  "D203",
  "D213",
  "D401",
  "E203",
  "I001",
  "RUF100",
]
lint.per-file-ignores."pillow_heif/__init__.py" = [
  "F401",
]
lint.per-file-ignores."setup.py" = [
  "S",
]
lint.extend-per-file-ignores.".github/**/*.py" = [
  "S404",
  "S603",
]
lint.extend-per-file-ignores."benchmarks/**/*.py" = [
  "D",
  "S404",
  "S603",
]
lint.extend-per-file-ignores."docs/**/*.py" = [
  "D",
]
lint.extend-per-file-ignores."examples/**/*.py" = [
  "D",
  "PERF",
]
lint.extend-per-file-ignores."libheif/**/*.py" = [
  "D",
  "PERF",
  "S",
  "SIM905",
]
lint.extend-per-file-ignores."tests/**/*.py" = [
  "B009",
  "D",
  "E402",
  "PERF",
  "S",
  "SIM115",
  "UP",
]
lint.mccabe.max-complexity = 16

[tool.isort]
profile = "black"

[tool.pylint]
master.extension-pkg-allow-list = [
  "_pillow_heif",
]
master.py-version = "3.10"
messages_control.disable = [
  "line-too-long",
  "missing-class-docstring",
  "missing-function-docstring",
]
reports.output-format = "colorized"
basic.good-names = [
  "_",
  "a",
  "b",
  "c",
  "d",
  "e",
  "ex",
  "f",
  "fp",
  "HeifImagePlugin",
  "i",
  "im",
  "j",
  "k",
  "v",
]
design.max-attributes = 16
design.max-branches = 16
design.max-locals = 18
design.max-returns = 8
similarities.ignore-imports = "yes"
similarities.min-similarity-lines = 6

[tool.mypy]
ignore_missing_imports = true
strict_optional = true
warn_no_return = true
warn_unreachable = true
show_error_codes = true

[tool.pytest]
ini_options.minversion = "6.0"
ini_options.testpaths = [
  "tests",
]
ini_options.addopts = "-rs --color=yes"
ini_options.filterwarnings = [
  "ignore::DeprecationWarning",
]

[tool.coverage]
run.cover_pylib = true
run.include = [
  "*/pillow_heif/*",
]
run.omit = [
  "*/tests/*",
]
paths.source = [
  "pillow_heif/",
  "*/site-packages/pillow_heif/",
]
report.exclude_lines = [
  "DEPRECATED",
  "DeprecationWarning",
  "pragma: no cover",
  "raise NotImplementedError",
]
