[metadata]
name = pillow_heif
description = Python 3.6+ interface to libheif library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bigcat88/pillow_heif
author = Alexander Piskun
author_email = bigcat88@users.noreply.github.com
keywords = heif, heic, avif, pillow
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Multimedia :: Graphics
    Topic :: Multimedia :: Graphics :: Graphics Conversion
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
license = Apache License 2.0
project_urls =
    Documentation=https://pillow-heif.readthedocs.io
    Source=https://github.com/bigcat88/pillow_heif
    Changelog=https://github.com/bigcat88/pillow_heif/blob/master/CHANGELOG.md

[options]
python_requires = >=3.6
zip_safe = False
packages = find:
install_requires =
    cffi>=1.14.6
    pillow>=8.3.0

[options.extras_require]
docs =
    sphinx>=4.4
    sphinx-issues>=3.0.1
    sphinx-rtd-theme>=1.0
tests-min =
    pytest
    piexif
    defusedxml
    packaging
tests =
    pytest
    piexif
    defusedxml
    packaging
    numpy
    pympler
dev =
    pytest
    piexif
    defusedxml
    packaging
    numpy
    pympler
    opencv-python
    pre-commit
    pylint<=2.14.5
    coverage

[flake8]
max-line-length = 120
target-version = ["py37"]
ignore = C0116, E203, W503
per-file-ignores =
    __init__.py: F401, F403
