[metadata]
name = pillow_heif
description = Python interface for libheif library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bigcat88/pillow_heif
author = Alexander Piskun
author_email = bigcat88@users.noreply.github.com
keywords = heif, heic, pillow
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Multimedia :: Graphics
    Topic :: Multimedia :: Graphics :: Graphics Conversion
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
license = BSD-3-Clause
project_urls =
    Documentation=https://pillow-heif.readthedocs.io
    Source=https://github.com/bigcat88/pillow_heif
    Changelog=https://github.com/bigcat88/pillow_heif/blob/master/CHANGELOG.md

[options]
python_requires = >=3.10
zip_safe = False
packages = find:
install_requires =
    pillow>=11.1.0

[options.extras_require]
docs =
    sphinx>=4.4
    sphinx-issues>=3.0.1
    sphinx-rtd-theme>=1.0
tests-min =
    pytest
    defusedxml
    packaging
tests =
    pytest
    defusedxml
    packaging
    numpy
    pympler
dev =
    pytest
    defusedxml
    packaging
    numpy
    pympler
    opencv-python==4.12.0.88
    pre-commit
    pylint
    coverage
    setuptools
