[metadata]
name = pi_heif
description = Python interface for libheif library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bigcat88/pillow_heif
author = Alexander Piskun
author_email = bigcat88@users.noreply.github.com
keywords = heic, heif, pillow
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Multimedia :: Graphics
    Topic :: Multimedia :: Graphics :: Graphics Conversion
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
license = Apache License 2.0
project_urls =
    Documentation=https://pillow-heif.readthedocs.io
    Source=https://github.com/bigcat88/pillow_heif
    Changelog=https://github.com/bigcat88/pillow_heif/blob/master/CHANGELOG.md

[options]
python_requires = >=3.7
zip_safe = False
packages = find:
install_requires =
    pillow>=8.3.0

[options.extras_require]
tests-min =
    pytest
    defusedxml
    packaging
tests =
    pytest
    defusedxml
    packaging
    numpy
    pympler
